@@ -15,7 +15,7 @@
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
-from karl.mail import Message
+from repoze.postoffice.message import Message
 from email.mime.multipart import MIMEBase
 from email.mime.multipart import MIMEMultipart
 from email.mime.text import MIMEText
